[package]
name = "tsz-core"
version.workspace = true
edition.workspace = true
autotests = false
description = "Core TypeScript compiler and type checker library"
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude = [
    "TypeScript/**",
    "tests/**",
    "benches/**",
    "scripts/**",
    "docs/**",
    "artifacts/**",
    "logs/**",
    "pkg/**",
    "wasm/**",
    "tmp/**",
    "target/**",
    ".claude/**",
    ".gemini/**",
    ".github/**",
    ".config/**",
    "debug*.ts",
    "debug*.js",
    "test*.ts",
    "test*.js",
    "*.py",
    "out*.txt",
    "output.txt",
    "yek.yaml",
]

[lib]
crate-type = ["rlib"]

[dependencies]
tsz-common = { workspace = true }
tsz-scanner = { workspace = true }
tsz-parser = { workspace = true }
tsz-binder = { workspace = true }
tsz-solver = { workspace = true }
tsz-lowering = { workspace = true }
tsz-checker = { workspace = true }
tsz-emitter = { workspace = true }
tsz-lsp = { workspace = true }
anyhow = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
once_cell = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "scanner_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "emitter_bench"
harness = false

[[bench]]
name = "real_world_bench"
harness = false

[[bench]]
name = "solver_bench"
harness = false

[[bench]]
name = "cfa_bench"
harness = false

[[bench]]
name = "parallel_bench"
harness = false

[[bench]]
name = "union_reduction_bench"
harness = false

[[bench]]
name = "object_subtype_bench"
harness = false

[[bench]]
name = "phase_timing_bench"
harness = false

[lints]
workspace = true
