[package]
name = "tsz-emitter"
description = "TypeScript-to-JavaScript emitter and transforms for the tsz compiler"
version.workspace = true
edition.workspace = true
autotests = false
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tsz-common = { workspace = true }
tsz-scanner = { workspace = true }
tsz-parser = { workspace = true }
tsz-binder = { workspace = true }
tsz-solver = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[[test]]
name = "comment_tests"
path = "tests/comment_tests.rs"

[[test]]
name = "variable_declaration_emit_tests"
path = "tests/variable_declaration_emit_tests.rs"

[[test]]
name = "optional_chaining_tests"
path = "tests/optional_chaining_tests.rs"

[lints]
workspace = true
