[package]
name = "tsz-emitter"
description = "TypeScript-to-JavaScript emitter and transforms for the tsz compiler"
version.workspace = true
edition.workspace = true
autotests = false
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tsz-common = { workspace = true }
tsz-scanner = { workspace = true }
tsz-parser = { workspace = true }
tsz-binder = { workspace = true }
tsz-solver = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[[test]]
name = "comment_tests"
path = "tests/comment_tests.rs"

[[test]]
name = "variable_declaration_emit_tests"
path = "tests/variable_declaration_emit_tests.rs"

[[test]]
name = "optional_chaining_tests"
path = "tests/optional_chaining_tests.rs"

[[test]]
name = "computed_property_es5_tests"
path = "tests/computed_property_es5_tests.rs"

[[test]]
name = "jsx_spread_tests"
path = "tests/jsx_spread_tests.rs"

[[test]]
name = "parenthesized_iife_tests"
path = "tests/parenthesized_iife_tests.rs"

[[test]]
name = "export_equals_type_only_namespace"
path = "tests/export_equals_type_only_namespace.rs"

[[test]]
name = "cjs_hoisted_var_position_tests"
path = "tests/cjs_hoisted_var_position_tests.rs"

[[test]]
name = "object_literal_recovery_tests"
path = "tests/object_literal_recovery_tests.rs"

[[test]]
name = "prefix_unary_recovery_tests"
path = "tests/prefix_unary_recovery_tests.rs"

[[test]]
name = "property_access_recovery_tests"
path = "tests/property_access_recovery_tests.rs"

[[test]]
name = "duplicate_extends_recovery_tests"
path = "tests/duplicate_extends_recovery_tests.rs"

[lints]
workspace = true
